# vesting-backend

./: Cargo.toml
src/: main.rs
src/model/: beneficiaries_model.rs  mod.rs
src/router/: update.rs
src/service/: db.rs  mod.rs
src/utils/: transaction.rs
